--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -21,6 +21,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     location / {
+      proxy_ignore_client_abort on;
       proxy_pass ##PROXY_PASS##;
       auth_basic "Restricted";
       auth_basic_user_file /etc/nginx/.htpasswd;
